# streamtopk-sae

./: .gitignore  README.md  SPEC.md  ncu_metrics_fixed.txt  pyproject.toml  requirements.txt  setup.py
bench/: grid.py  report.py  run_bandwidth.py  run_max_F.py  run_memory.py  run_recall.py  run_runtime.py
streamtopk_sae/: __init__.py  baselines.py  ops.py  reference.py  synthetic.py  triton_kernels.py  utils.py
streamtopk_sae/csrc/: bindings.cpp
streamtopk_sae/csrc/cpu/: streamtopk_cpu.cpp  topk_buffer.hpp
streamtopk_sae/csrc/cuda/: streamtopk_approx.cu  streamtopk_exact.cu  topk_buffer.cuh
tests/: test_correctness.py  test_recall.py  test_smoke.py  test_synthetic.py
