[build-system]
requires = ["setuptools>=42", "torch>=2.3"]
build-backend = "setuptools.build_meta"

[project]
name = "streamtopk-sae"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.3",
    "triton>=2.3",
    "numpy",
    "scipy",
    "pytest",
    "pandas",
    "matplotlib",
    "tqdm",
]
